--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cryptodex",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "main": "index.js",
   "bin": "./bin/cryptodex.js",
   "scripts": {
@@ -11,6 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
+    "colors": "^1.4.0",
+    "commander": "^12.1.0",
+    "configstore": "^7.0.0",
+    "inquirer": "^12.1.0",
     "nodemon": "^3.1.7"
   }
 }
