--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon  --experimental-modules index.js"
+    "start": "node --no-warnings index.js"
   },
   "author": "Tushar Kalra",
   "license": "ISC",
